--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,5 +1,10 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+	if user
+		p
+			| Welcome #{user.username}
+	else
+		p
+			| Welcome stranger would you like to 
+			a(href='/auth/twitter') login?
