Refactor twitter passport implementation.  Update core submodule.

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -3,7 +3,9 @@ extends layout
 block content
 	if user
 		p
-			| Welcome #{user.username}
+			| Welcome #{user.name}
+			|would you like to 
+			a(href='/logout') logout?
 	else
 		p
 			| Welcome stranger would you like to 
